--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <!-- New -->
+    <string-array name="witness_roles">
+        <item>VET Gate</item>
+        <item>Finnish</item>
+    </string-array>
+
     <string name="app_name">demo_uhf</string>
     <string name="action_settings">Settings</string>
     <string name="action_about">About</string>
