--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     </string-array>
 
     <string name="toggleButton">Start</string>
+    <string name="connectButton">Connect</string>
     <string name="title_stop_Inventory">Stop</string>
     <string name="app_name">demo_uhf</string>
     <string name="close">Close</string>
