--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -2,10 +2,12 @@
 <resources>
 
     <string-array name="witness_roles">
-        <item>VET Gate</item>
-        <item>Finnish</item>
+        <item>@string/witness_role_vet</item>
+        <item>@string/witness_role_finish</item>
     </string-array>
 
+    <string name="witness_role_vet">VET Gate</string>
+    <string name="witness_role_finish">Finnish</string>
     <string name="toggleButton">Start</string>
     <string name="connectButton">Connect</string>
     <string name="title_stop_Inventory">Stop</string>
