Change title to endurance witness

--- a/src/main/res/values-zh/strings.xml
+++ b/src/main/res/values-zh/strings.xml
@@ -9,7 +9,7 @@
     <string name="witness_role_vet">VET Gate</string>
     <string name="witness_role_finish">Finish</string>
     <string name="title_stop_Inventory">Stop</string>
-    <string name="app_name">demo_uhf</string>
+    <string name="app_name">Endurance Witness</string>
     <string name="close">Close</string>
 
 </resources>
