--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -11,7 +11,7 @@
     <string name="toggleButton">Start</string>
     <string name="connectButton">Connect</string>
     <string name="title_stop_Inventory">Stop</string>
-    <string name="app_name">demo_uhf</string>
+    <string name="app_name">Endurance Witness</string>
     <string name="close">Close</string>
 
 </resources>
